- new renderer cvar to activate OpenGL texture MultiSampling: r_ext_multisample. You really need a good video card to use it.
 - Thanks to ioQuake3 team for r_ext_multisample cvar
- new server console commands "bigtext" and "cp" to authorize server admins to display big message. A client number can be used
  as first argument to only display the messsage to a given client.
*** CHANGES ***
- Reloading bug fixed by Joe Kari
- Fix game crash during game load when using cgame binary library
- Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
- Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode
- Fix little freeze/lag in dm_train
- Fix invisible "entity 0" bug near movers entities we can trigger
- Many fixes from ioQuake3 sources
- New cvars from ioQ3 updates:
  - s_muteWhenUnfocused to mute sound when unfocused (default=0)
  - r_allowResize to allow window resizing in windowed rendering mode (default=0), only with SDL support

Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)
- Fixed buildvm.bat and cleanvm.bat which weren't working due to reorganization
- Organized VC build solutions
- Removed old VC build solutions
- Created SSE and SSE2 build profiles for each solution
- Added lcc compiler toolchain back
- Added AL and unix files

Changes since sg 0.9
******************
*** CHANGES ***
- Copyright updated.
- Source license header audit completed.